# taskiq-faststream

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
scripts/: lint.sh  test.sh
taskiq_faststream/: __about__.py  __init__.py  broker.py  formatter.py  kicker.py  scheduler.py  serializer.py  task.py  types.py  utils.py
tests/: conftest.py  messages.py  test_broker.py  test_kafka.py  test_nats.py  test_rabbit.py  test_redis.py  test_resolve_message.py  test_stub.py  testcase.py
